--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvas": "^2.11.0",
     "ethers": "^6.0.4",
     "firebase": "^9.17.1",
     "prop-types": "^15.8.1",
